To fix the device independent centering
Brian tweaked the xml and transform code to center the image in parent
and change the matrix coordinates.
This works for tablets (nexus 7)
However for phone devices like  (Samsung Galaxy 3) it needs further
tweaking to constrain the image within the view port.

Also changed the rotation to 360 xyz rotation

--- a/Integration_v1/RandomTest/res/layout/activity_random_test_old.xml
+++ b/Integration_v1/RandomTest/res/layout/activity_random_test_old.xml
@@ -20,8 +20,8 @@
             android:id="@+id/answerImageView"
             android:layout_width="@dimen/image_width"
             android:layout_height="@dimen/image_height"
-            android:layout_centerInParent="true"
-   
+            android:layout_marginTop="205dp"
+            android:layout_marginLeft="127dp"
             android:src="@drawable/one" />
 
         <Button
